--- a/app/src/main/res/values/values-configapp.xml
+++ b/app/src/main/res/values/values-configapp.xml
@@ -4,7 +4,7 @@
 
     <!-- info texts -->
 
-    <string name="gs_rom_name">GrxSettings (change it to your rom name..)</string>
+    <string name="gs_rom_name">DeluxeROM®</string>
 
 
 
@@ -12,10 +12,10 @@
 
     <!-- Global configuration -->
 
-    <string name="grxs_app_name">GrxSettings v2</string>
-    <bool name="grxb_demo_mode">true</bool> <!-- DEMO MODE - set to false to run your app : the app will take rom_tabs_names and rom_tabs_layouts for rom info, and rom_navigation_screens as navigation menu. Use values-rom or similar to add your arrays, strings, integers, etc.. to have your code clearer -->
+    <string name="grxs_app_name">DRC</string>
+    <bool name="grxb_demo_mode">false</bool> <!-- DEMO MODE - set to false to run your app : the app will take rom_tabs_names and rom_tabs_layouts for rom info, and rom_navigation_screens as navigation menu. Use values-rom or similar to add your arrays, strings, integers, etc.. to have your code clearer -->
 
-    <bool name="grxb_global_enable_settingsdb">false</bool> <!-- set to true when running your app when you want to save values in settings. This is a main switch. Use false when you are playing configuring preferences for not to mess your settings -->
+    <bool name="grxb_global_enable_settingsdb">true</bool> <!-- set to true when running your app when you want to save values in settings. This is a main switch. Use false when you are playing configuring preferences for not to mess your settings -->
 <!-- grxb_saveSettings_default is a preference attribute. Set by default to true for not to have to  declare that attribute on every pref. Play with this two bools when doing tests -->
     <bool name="grxb_saveSettings_default">true</bool> <!-- saveSettings preference attribute value -->
     <!-- user options default values -->
@@ -59,7 +59,7 @@
 
     <!-- Common extra Broadcast Action - When the attribute commonBcExtra is found in a pref, after value change a broadcast with this action and
     the extra value will be sent -->
-    <string name="grx_common_extra_broadcast">com.grx.settings</string>
+    <string name="grx_common_extra_broadcast">deluxerom_master_prefs</string>
 
 
     <bool name="grxb_confirmKillpackage_default">false</bool>
