--- a/app/src/main/res/layout/grx_nav_header.xml
+++ b/app/src/main/res/layout/grx_nav_header.xml
@@ -21,7 +21,7 @@
     android:background="?svn_nav_header_bg"
     android:theme="?sublimetheme">
 
-    <ImageView
+    <!--ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/gid_developer_icon"
@@ -30,7 +30,13 @@
         android:scaleType="fitXY"
         android:padding="0dp"
         android:layout_marginStart="0dp"
-        android:layout_gravity="center_vertical"/>
+        android:layout_gravity="center_vertical"/-->
+
+    <com.deluxerom.Animation
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:src="@drawable/deluxe_animation"
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_width="wrap_content"
